--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -226,7 +226,7 @@ a:focus {
 }
 .download-section {
   width: 100%;
-  padding: 50px 0;
+  padding: 0px 0;
   color: white;
   background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
   background-color: black;
@@ -318,6 +318,9 @@ body {
   
 }
 #contact{
-  padding-bottom:100px;
+  padding-bottom:130px;
+}
+#about{
+  
 }
 
