--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -82,6 +82,7 @@ a:focus {
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
+
 }
 .navbar-custom .nav li a:hover {
   color: rgba(255, 255, 255, 0.8);
@@ -125,7 +126,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(../img/pinnicles.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -228,7 +229,8 @@ a:focus {
   width: 100%;
   padding: 0px 0;
   color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  height: 600px;
+  background: url(../img/CirqueSunset.jpg) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -319,8 +321,15 @@ body {
 }
 #contact{
   padding-bottom:130px;
+  margin-top:100px;
 }
 #about{
   
+}
+#projects{
+  margin-bottom:200px;
+}
+#journey{
+ padding-top:220px;
 }
 
