--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -126,7 +126,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/pinnicles.jpg) no-repeat bottom center scroll;
+  background: url(../img/Pinnicles.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
