fixed image link

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -126,7 +126,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/Pinnicles.jpg) no-repeat bottom center scroll;
+  background: url(../img/Pinnicles.JPG) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -230,7 +230,7 @@ a:focus {
   padding: 0px 0;
   color: white;
   height: 600px;
-  background: url(../img/CirqueSunset.jpg) no-repeat center center scroll;
+  background: url(../img/CirqueSunset.JPG) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
