--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -237,10 +237,9 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px;
+
+#mvc{
+  display: none;
 }
 @media (min-width: 767px) {
   .content-section {
@@ -321,13 +320,25 @@ body {
 }
 #contact{
   padding-bottom:130px;
-  
-}
 
+}
 #my-website-btn{
   margin-top:150px;
 }
+.projectButton{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-#projectButton{
-  margin-top:40px;
+.icon{
+  display: none;
+  max-height: 50px;
+  max-width: 50px;
+}
+
+#python{
+
+}
+#sql{
+  
 }
