--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -27,6 +27,7 @@ p {
   font-size: 18px;
   line-height: 1.5;
 }
+
 @media (min-width: 768px) {
   p {
     margin: 0 0 35px;
@@ -233,11 +234,25 @@ a:focus {
   -o-background-size: cover;
   
 }
+.resume-section {
+  width: 100%;
+  padding: 0px 0;
+  color: white;
+  height: 630px;
+  /*background: url(../img/CirqueSunset.JPG) no-repeat center center scroll;*/
+  background-color: white;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  
+}
 .contact-section {
   width: 100%;
   padding: 66px 0;
   height: 630px;
   color: black;
+  margin-top: 30px; 
   background-color: white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -246,9 +261,7 @@ a:focus {
   
 }
 
-#mvc{
-  display: none;
-}
+
 @media (min-width: 767px) {
   .content-section {
     
@@ -359,4 +372,8 @@ body {
 
 #greeting{
   margin-top:10px;
+}
+#resumefile{
+   align-content:center;
+   z-index: 1;
 }
