Timed Popup Modal 1.0
Added script and html to new timed modal. Also added google analytics
html page to verify ownership.

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -377,3 +377,11 @@ body {
    align-content:center;
    z-index: 1;
 }
+#modal1{
+  width:30em;
+  height:22em;
+  position: absolute;
+  float:right;
+  
+
+}
